unit and integration tests red and green

--- a/mongodb/.kitchen.yml
+++ b/mongodb/.kitchen.yml
@@ -21,7 +21,9 @@ suites:
   - name: default
     run_list:
       - recipe[mongodb::default]
+      - recipe[mongodb::mongodb]
     verifier:
       inspec_tests:
         - test/integration/default
+        - test/integration/mongodb
     attributes:
